--- a/RequestServicePage/RequestService.css
+++ b/RequestServicePage/RequestService.css
@@ -89,7 +89,7 @@ body {
   margin: 0;
   left: 0;
   top: 0;
-  background-image: url("../Content Repository/Rent a Service image.png");
+  background-image: url("../ContentRepository/RentaServiceimage.png");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
