--- a/MainPage/Mainpage.css
+++ b/MainPage/Mainpage.css
@@ -58,14 +58,17 @@ body {
   z-index: 1;
 }
 .lead-header-main {
+  color: white;
   padding-top: 15%;
   text-align: center;
   font-size: 3rem;
   text-shadow: 0 0 3px black;
+  text-transform: uppercase;
 }
 .lead-header-main p {
   margin-top: 0%;
-  font-size: 0.8rem;
+  font-size: 1rem;
+  text-transform: uppercase;
 }
 
 /*spacing*/
@@ -91,11 +94,12 @@ body {
   justify-content: center;
   width: 10rem;
   border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+  color: white;
 }
 .lead-header-body-buttons:hover {
   transition: 0.3s ease-out;
-  filter: drop-shadow(0 0 0.5rem rgb(255, 255, 255));
+  filter: drop-shadow(0 0 0.5rem rgb(0, 0, 0));
 }
